WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21886
window.HTMLOptionElement == "[object HTMLElementConstructor]" instead of HTMLOptionElementConstructor
https://bugs.webkit.org/show_bug.cgi?id=21886
Summary
window.HTMLOptionElement == "[object HTMLElementConstructor]" instead of HTML...
Eric Seidel (no email)
Reported
2008-10-25 08:24:07 PDT
window.HTMLOptionElement == "[object HTMLElementConstructor]" instead of HTMLOptionElementConstructor I filed this as
bug 21842
originally, but that was decided invalid. I'm not sure what the functionality of "new HTMLOptionElement" needs to be, but it seems that window.HTMLOptionElement should be a specifically-named constructor like all the rest of the HTMLElement "subclasses" instead of being just an HTMLElementConstructor. See
bug 21842
for more background. To fix this will probably require using a new idl flag "CustomConstructor" to have the JSHTMLOptionElement generated class generate a getConstructor function with the appropriate types.
Attachments
test case
(198 bytes, text/html)
2008-10-26 04:51 PDT
,
Alexey Proskuryakov
no flags
Details
proposed fix
(29.63 KB, patch)
2008-10-26 14:47 PDT
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-10-26 04:51:21 PDT
Created
attachment 24682
[details]
test case This is a real bug that affects extending HTMLOptionElement prototype, not just a problem with its constructor name.
Alexey Proskuryakov
Comment 2
2008-10-26 05:41:46 PDT
I have a fix (window.Option and window.HTMLOptionElement are two different constructors, we need to provide both).
Alexey Proskuryakov
Comment 3
2008-10-26 14:47:18 PDT
Created
attachment 24684
[details]
proposed fix
Alexey Proskuryakov
Comment 4
2008-10-27 01:00:11 PDT
Committed revision 37895.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug