WebCore/bindings/js/JSDOMWindowBase.cpp
@@ -43,10 +43,10 @@
 #include "JSEvent.h"
 #include "JSEventListener.h"
 #include "JSHTMLCollection.h"
-#include "JSHTMLOptionElementConstructor.h"
 #include "JSImageConstructor.h"
 #include "JSMessageChannelConstructor.h"
 #include "JSNode.h"
+#include "JSOptionConstructor.h"
 #include "JSXMLHttpRequestConstructor.h"
 #include "JSXSLTProcessorConstructor.h"
 #include "Logging.h"
@@ -448,7 +448,7 @@ JSValue* jsDOMWindowBaseOption(ExecState* exec, const Identifier&, const Propert
 {
     if (!static_cast<JSDOMWindowBase*>(asObject(slot.slotBase()))->allowsAccessFrom(exec))
         return jsUndefined();
-    return getDOMConstructor<JSHTMLOptionElementConstructor>(exec, static_cast<JSDOMWindowBase*>(asObject(slot.slotBase())));
+    return getDOMConstructor<JSOptionConstructor>(exec, static_cast<JSDOMWindowBase*>(asObject(slot.slotBase())));
 }
 
 JSValue* jsDOMWindowBaseXMLHttpRequest(ExecState* exec, const Identifier&, const PropertySlot& slot)
